--- a/kwitter_room.html
+++ b/kwitter_room.html
@@ -33,6 +33,6 @@
 		<div id="output"></div>
 	</center>
 </div>
-<script src="kwitter_room (2).js"></script>
+<script src="kwitter_room.js"></script>
 </body>
 </html>
